fix(layout): add content component to align and style copy

--- a/src/app/core/components/app/app.component.scss
+++ b/src/app/core/components/app/app.component.scss
@@ -26,6 +26,10 @@
   --aaLine-animation-length: 2s;
 
   font-size: 100%;
+
+  @media (min-width: 650px) {
+    --fontSize-body: 1.3rem;
+  }
 }
 
 body {
